[package]
name = "tetris"
version = "0.1.0"
authors = ["automanyang <automanyang@gmail.com>"]
edition = "2018"

[dependencies]
fltk = { version = "^1" }
rand = { version = "^0.8" }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic